@@ -23,6 +23,9 @@ NEWS - list of user-visible changes between releases of GNU Libtool
 
   - Fix path comparison by removing trailing slashes on install commands.
 
+  - Fix linking for mingw with lld by prefering response files over the
+    linker script.
+
 ** Changes in supported systems or compilers:
 
   - Support additional flang-based compilers, 'f18' and 'f95'.
